--- a/platformio.ini
+++ b/platformio.ini
@@ -1,15 +1,16 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = robot_code  ; ← 通常はこのモードで動かす
 
-[env:esp32dev]
+[env:robot_code] ; pio run -e robot_code --target upload
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+build_src_filter = +<main.cpp>
+
+[env:clear_nvs] ; pio run -e clear_nvs --target upload
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<clear_nvs.cpp>
